# maya

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  llm.py  main.py  models.py  quota.py  stripe_billing.py  telegram.py  tools.py
app/admin/: routes.py
app/admin/templates/: base.html  conversations.html  overview.html  user_detail.html  users.html
app/static/: style.css
app/templates/: base.html  consent.html  landing.html  pricing.html  privacy.html  terms.html
docs/superpowers/specs/: 2026-04-09-maya-sms-assistant-design.md
tests/: test_config.py  test_llm.py  test_quota.py
