[project]
name = "maya"
version = "1.0.0"
description = "Maya — the AI that actually knows you. Just text her on Telegram."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "python-telegram-bot>=21",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "anthropic>=0.52",
    "stripe>=12",
    "ddgs>=9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
